--- a/Bluetooth_Audio_Player.ioc
+++ b/Bluetooth_Audio_Player.ioc
@@ -33,24 +33,25 @@ Mcu.IP8=USART1
 Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_FATFS_VS_Generic
-Mcu.Pin14=VP_SYS_VS_ND
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PB0
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=17
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_FATFS_VS_Generic
+Mcu.Pin15=VP_SYS_VS_ND
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -91,6 +92,8 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
