--- a/Bluetooth_Audio_Player.ioc
+++ b/Bluetooth_Audio_Player.ioc
@@ -40,13 +40,14 @@ Mcu.Pin10=PB11
 Mcu.Pin11=PA8
 Mcu.Pin12=PA9
 Mcu.Pin13=PA10
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_FATFS_VS_Generic
-Mcu.Pin17=VP_SYS_VS_ND
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=PB5
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_FATFS_VS_Generic
+Mcu.Pin18=VP_SYS_VS_ND
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
@@ -54,7 +55,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB10
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -95,6 +96,8 @@ PB10.Locked=true
 PB10.Signal=GPXTI10
 PB11.Locked=true
 PB11.Signal=GPXTI11
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
